Fix mobile align in post and comments

--- a/src/assets/scss/_comments.scss
+++ b/src/assets/scss/_comments.scss
@@ -17,7 +17,7 @@
                         width: 45vw;
                     }
                     @media (max-width: 576px){
-                        width: 90vw;
+                        width: 80vw;
                     }
                 }
             }
