--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -106,7 +106,11 @@ form{
     }
 }
 .tainacan-title{
-    padding: 0 1rem 0 2rem;
+    @media screen {
+        @media (min-width: 992px) {
+            padding: 0 1rem 0 2rem;
+        }
+    }
 }
 @import "_comments";
 
